# flarepaint

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  main.rs
