[package]
name = "flarepaint"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.12"
# log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
debug = false
panic = "abort"


[profile.wasm-release]
inherits = "release"
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = true
