[package]
name = "flarepaint"
version = "0.1.0"
edition = "2024"

[dependencies]
makepad-widgets = "1.0.0"


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
debug = false
panic = "abort"


[profile.wasm-release]
inherits = "release"
opt-level = "z"
# Strip all debugging information from the binary to slightly reduce file size.
strip = true
