[package]
name = "flarepaint"
version = "0.1.0"
edition = "2024"

[dependencies]
# iced = { version = "0.12", features = ["canvas", "debug"] }
iced = "0.12"


[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
debug = false
panic = "abort"


[profile.wasm-release]
inherits = "release"
opt-level = "z"
strip = true
